opam-version: "2.0"
name: "websocketaf-lwt"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Antonio N. Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/websocketaf"
bug-reports: "https://github.com/inhabitedtype/websocketaf/issues"
dev-repo: "git+https://github.com/inhabitedtype/websocketaf.git"
build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "websocketaf"
  "dune"
  "faraday-async"
  "async"
  "digestif"
  "base64"
]
synopsis: "Lwt support for websocket/af"
