opam-version: "1.2"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/websocketaf"
bug-reports: "https://github.com/inhabitedtype/websocketaf/issues"
dev-repo: "https://github.com/inhabitedtype/websocketaf.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name]
]
depends: [
  "dune" {build}
  "base64"   {>= "3.0.0"}
  "alcotest" {test}
  "bigstringaf"
  "angstrom" {>= "0.7.0"}
  "faraday"  {>= "0.5.0"}
  "httpaf"
  "result"
]
available: [ ocaml-version >= "4.03.0" ]
